public/css/pages/index.css
/* SECTION - GENERICS */
.cromed {
    background-image: url('/images/images/sfondo-cromato.jpg');
    background-position: center center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

.highlighted-container {
    background-color: var(--highlight-color);
    transition: background-color 0.2s;
}

.sub-hero {
    vertical-align: middle;
    width: 100%;
    margin: auto;
}

/* !SECTION - GENERICS */

/* SECTION - HERO */
#hero-wrapper {
    background-color: black;
    position: relative;
}

#hero {
    width: 65%;
    margin: auto;
}

@media (max-width: 1200px) {
    #hero {
        width: 95%;
    }
}

#hero-3d-ui-wrapper {
    background: url("/images/logo/logo-ontop-grey-bg-hero.svg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    /*  Used to make aspect ratio of div as the image.
        the numbers are the width and height of the background image */
    /* NOTE - without this the height would crop the logo */
    aspect-ratio: 4/2;

    position: relative;
}


#hero-3d-render {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 2;
}

#hero-color-picker-desktop-wrapper {
    position: absolute;
    bottom: 0;
    right: 10px;
    z-index: 3;
}

@media (max-width: 1200px) {
    #hero-3d-ui-wrapper {
        aspect-ratio: 4/3;
    }

    #hero-3d-render {
        height: auto;
        aspect-ratio: 5/4;
    }
}

@media (max-width: 700px) {
    #hero-3d-ui-wrapper {
        aspect-ratio: 4/4;
        background-position-y: 20%;
    }
}

#hero-color-picker-tablet-wrapper {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    z-index: 3;
}

#hero-cta {
    display: grid;
    grid-template-columns: 80% 20%;
    margin-top: 1.85rem;
    color: white;
    position: relative;
    z-index: 3;
}

#hero-cta-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: end;
}

#hero-cta-buttons>a {
    min-width: 7.25rem;
    width: fit-content;
}

@media (max-width: 1200px) {
    #hero-cta {
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: repeat(2, auto);
        margin-top: 1.85rem;
    }

    #hero-cta-buttons {
        flex-direction: row;
        justify-content: left;
        gap: 2rem;
    }
}

/* !SECTION - HERO */

/* SECTION - SECTION LIGHT */
#section-light {
    background-color: #f9f9f9;
}

/* BENTO LIGHT */
/* DESKTOP */
#bento-light {
    padding: 2rem 0;
    display: grid;
    gap: 0.75em;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(10, 1fr);
    grid-auto-flow: row;
    grid-template-areas:
        "item-1 item-1 item-1 item-1 item-2 item-2 item-2 item-2 item-3 item-3"
        "item-1 item-1 item-1 item-1 item-2 item-2 item-2 item-2 item-3 item-3"
        "item-1 item-1 item-1 item-1 item-2 item-2 item-2 item-2 item-3 item-3"
        "item-1 item-1 item-1 item-1 item-2 item-2 item-2 item-2 item-3 item-3"
        "item-1 item-1 item-1 item-1 item-2 item-2 item-2 item-2 item-3 item-3"
        "item-1 item-1 item-1 item-1 item-5 item-5 item-5 item-6 item-6 item-6"
        "item-1 item-1 item-1 item-1 item-5 item-5 item-5 item-6 item-6 item-6"
        "item-4 item-4 item-4 item-4 item-5 item-5 item-5 item-6 item-6 item-6"
        "item-4 item-4 item-4 item-4 item-5 item-5 item-5 item-6 item-6 item-6"
        "item-4 item-4 item-4 item-4 item-5 item-5 item-5 item-6 item-6 item-6"
        "item-4 item-4 item-4 item-4 item-5 item-5 item-5 item-6 item-6 item-6";
}

#bento-light>* {
    border-radius: 10px;
}

/* break word to no go over width inside bento squares */
#lb-item-1,
#lb-item-2,
#lb-item-3,
#lb-item-4,
#lb-item-5,
#lb-item-6 {
    overflow-wrap: break-word;
}

/* DIV WITH TEXTS */
#lb-item-2,
#lb-item-5,
#lb-item-6 {
    padding: 2rem;
}

/* BENTO ITEM MICRO HANDLING */
#lb-item-1 {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    grid-area: item-1;
}

#lb-item-2 {
    grid-area: item-2;
    background-color: white;
}

#lb-item-3 {
    grid-area: item-3;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 35%;
}

#lb-item-4 {
    grid-area: item-4;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100% 100%;
}

#lb-item-5 {
    grid-area: item-5;
}

#lb-item-6 {
    grid-area: item-6;
}

/* TABLET */
@media (max-width: 1200px) {
    #bento-light {
        grid-template-columns: repeat(6, 1fr);
        grid-template-rows: repeat(3, auto);
        gap: 1rem;
        grid-template-areas:
            "item-1 item-1 item-1 item-2 item-2 item-2"
            "item-3 item-3 item-5 item-5 item-5 item-5"
            "item-6 item-6 item-6 item-4 item-4 item-4";

    }

    #lb-item-2,
    #lb-item-5,
    #lb-item-6 {
        padding: 1rem;
    }

    #lb-item-4 {
        background-size: 150%;
    }
}

/* MOBILE */
@media (max-width: 700px) {
    #bento-light {
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(6, auto);
        gap: 1rem;
        grid-template-areas:
            "item-1"
            "item-2"
            "item-3"
            "item-5"
            "item-4"
            "item-6";
    }

    /* DIV WITH BG */
    #lb-item-1 {
        background-size: 175%;
    }

    #lb-item-1,
    #lb-item-3,
    #lb-item-4 {
        height: 300px;
    }

    #lb-item-4 {
        background-size: 120%;
        background-position: 90%;
        height: 200px;
    }
}

/* !SECTION - SECTION LIGHT */

/* SECTION - SECTION DARK */
#dark-sub-hero {
    margin-top: 2rem;
}

#section-dark {
    background-color: black;
}

#bento-dark {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(2, auto);
    gap: 0.5rem;
    grid-template-areas:
        "item-1 item-2 item-2 item-3 item-3 item-3 item-3"
        "item-4 item-4 item-4 item-4 item-5 item-5 item-5";
}

#bento-dark>div {
    background-color: #100d0c;
    color: var(--light-text-color);
    border-radius: 10px;
    border: 1px solid #312f2e;
}

@media (min-width: 1200px) {
    #bento-dark>div {
        min-height: 400px;
    }
}


#db-item-1 {
    grid-area: item-1;
    background-size: 80% 80%;
    background-position: center center;
    background-repeat: no-repeat;
    background-image: url('/images/logo/logo-ontop-white-cropped-rotated.png');
}

#db-item-2 {
    grid-area: item-2;
}

#db-item-3 {
    grid-area: item-3;
}

#db-item-4 {
    grid-area: item-4;
}

#db-item-5 {
    grid-area: item-5;
}

#logo-over-image {
    width: 25%;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

#db-item-2,
#db-item-3,
#db-item-5 {
    padding: 2rem;
}

#db-item-4 {
    background-position: center;
    background-size: 100%;
    background-repeat: no-repeat;
}

/* TABLET */
@media (max-width: 1200px) {
    #dark-sub-hero {
        margin: auto;
        margin-top: 0rem;
        width: 95%;
    }

    #db-item-4 {
        border-width: 0px;
    }

    #section-dark {
        background-color: #f9f9f9;
    }

    #bento-dark {
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: repeat(10, auto);
        gap: 0.5rem;
        grid-template-areas:
            "item-1 item-2 item-2 item-2"
            "item-1 item-2 item-2 item-2"
            "item-1 item-3 item-3 item-3"
            "item-1 item-3 item-3 item-3"
            "item-1 item-3 item-3 item-3"
            "item-4 item-4 item-4 item-4"
            "item-4 item-4 item-4 item-4"
            "item-5 item-5 item-5 item-5"
            "item-5 item-5 item-5 item-5";
    }

    #db-item-1 {
        background-image: url('/images/logo/logo-ontop-white-cropped-rotated.png');
    }

    #db-item-2,
    #db-item-3,
    #db-item-5 {
        padding: 1rem;
    }

    #db-item-5 ul {
        display: flex;
        flex-wrap: wrap;
    }

    #db-item-5 ul li {
        width: 45%;
    }

    #db-item-4 {
        height: 350px;
        background-position-y: 70%;
    }
}

/* MOBILE */
@media (max-width: 700px) {
    #bento-dark {
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(6, auto);
        grid-template-areas:
            "item-1"
            "item-2"
            "item-3"
            "item-4"
            "item-5";
    }

    #hero-cta>h1 {
        line-height: 2.5rem;
    }

    #db-item-1 {
        height: 150px;
        background-size: contain;
        background-image: url('/images/logo/logo-ontop-white-cropped.svg');
    }

    #db-item-4 {
        height: 180px;
    }

    #db-item-5 ul {
        display: inline-block;
    }

    #db-item-5 ul li {
        width: 100%;
        font-size: 0.9rem;
    }
}

/* !SECTION - SECTION DARK */

